--- a/blogpost/templates/blogpost/strippost_detail.html
+++ b/blogpost/templates/blogpost/strippost_detail.html
@@ -20,8 +20,8 @@
                 <!-- Check for authentication and if user is usert that add the strip -->
                 {% if request.user.is_authenticated and request.user.id == post.author.id %}
                 <div class="card-body text-center">
-                    <a href="{% url 'update-post' post.slug %}" class="btn btn-yellow m-1" aria-label="Link to update {{ post.title }}">Update</a>
-                    <a href="{% url 'delete-post' post.slug %}" class="btn btn-red m-1" aria-label="Link to delete {{ post.title }}">Delete</a>
+                    <a href="{% url 'update-post' post.slug %}" class="btn btn-yellow m-1" aria-label="Link to update {{ post.title }}"><i class="fa-solid fa-pen-to-square"></i> Update</a>
+                    <a href="{% url 'delete-post' post.slug %}" class="btn btn-red m-1" aria-label="Link to delete {{ post.title }}"><i class="fa-regular fa-trash-can"></i> Delete</a>
                 </div>
                 {% endif %}
             </div>
@@ -70,8 +70,8 @@
                     <button class="btn btn-sm btn-blue m-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCard{{ post.strip.id }}" aria-expanded="false" aria-controls="collapseCard{{ post.strip.id }}">Details</button>
                 <!-- Check for authentication and if user is usert that add the strip -->
                 {% if request.user.is_authenticated and request.user.id == post.strip.user.id %}
-                    <a href="{% url 'strip-update' post.strip.slug %}" class="btn btn-sm btn-yellow m-1" aria-label="Link to update {{ post.strip.title }}">Update</a>
-                    <a href="{% url 'strip-delete' post.strip.slug %}" class="btn btn-sm btn-red m-1" aria-label="Link to delete {{ post.strip.title }}">Delete</a>
+                    <a href="{% url 'strip-update' post.strip.slug %}" class="btn btn-sm btn-yellow m-1" aria-label="Link to update {{ post.strip.title }}"><i class="fa-solid fa-pen-to-square"></i> Update</a>
+                    <a href="{% url 'strip-delete' post.strip.slug %}" class="btn btn-sm btn-red m-1" aria-label="Link to delete {{ post.strip.title }}"><i class="fa-regular fa-trash-can"></i> Delete</a>
                 {% endif %}
                 </div>
             </div>
