--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/c06e2d0b20.js" crossorigin="anonymous"></script>
     <!-- Custom JavaScript -->
     <script src="{% static 'js/script.js' %}"></script>
 </body>
