--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active px-2" aria-current="page" href="{% url 'blog' %}" aria-label="Link to blog page">Blog</a>
+                        <a class="nav-link px-2" aria-current="page" href="{% url 'blog' %}" aria-label="Link to blog page">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link px-2" href="{% url 'strip-list' %}" aria-label="Link to strips page">Strips / Comics</a>
