--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,27 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* General Style */
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     min-height: 100vh;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     position: relative;
 }
 
 main {
-    flex: 1 0 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
 }
 
 /* Hides current Avatar url on update form (Because avatar is already renderd on page) */
@@ -53,90 +67,118 @@ main {
 .box-animation div:nth-child(1) {
     top: 5%;
     left: 45%;
-    animation: animate 10s linear infinite;
+    -webkit-animation: animate 10s linear infinite;
+            animation: animate 10s linear infinite;
 }
 
 .box-animation div:nth-child(2) {
     top: 70%;
     left: 50%;
-    animation: animate 9s linear infinite;
+    -webkit-animation: animate 9s linear infinite;
+            animation: animate 9s linear infinite;
 }
 
 .box-animation div:nth-child(3) {
     top: 17%;
     left: 6%;
-    animation: animate 7s linear infinite;
+    -webkit-animation: animate 7s linear infinite;
+            animation: animate 7s linear infinite;
 }
 
 .box-animation div:nth-child(4) {
     top: 20%;
     left: 60%;
-    animation: animate 10s linear infinite;
+    -webkit-animation: animate 10s linear infinite;
+            animation: animate 10s linear infinite;
 }
 
 .box-animation div:nth-child(5) {
     top: 67%;
     left: 10%;
-    animation: animate 6s linear infinite;
+    -webkit-animation: animate 6s linear infinite;
+            animation: animate 6s linear infinite;
 }
 
 .box-animation div:nth-child(6) {
     top: 80%;
     left: 70%;
-    animation: animate 12s linear infinite;
+    -webkit-animation: animate 12s linear infinite;
+            animation: animate 12s linear infinite;
 }
 
 .box-animation div:nth-child(7) {
     top: 50%;
     left: 70%;
-    animation: animate 15s linear infinite;
+    -webkit-animation: animate 15s linear infinite;
+            animation: animate 15s linear infinite;
 }
 
 .box-animation div:nth-child(8) {
     top: 32%;
     left: 25%;
-    animation: animate 16s linear infinite;
+    -webkit-animation: animate 16s linear infinite;
+            animation: animate 16s linear infinite;
 }
 
 .box-animation div:nth-child(9) {
     top: 90%;
     left: 25%;
-    animation: animate 9s linear infinite;
+    -webkit-animation: animate 9s linear infinite;
+            animation: animate 9s linear infinite;
 }
 
 .box-animation div:nth-child(10) {
     top: 20%;
     left: 80%;
-    animation: animate 5s linear infinite;
+    -webkit-animation: animate 5s linear infinite;
+            animation: animate 5s linear infinite;
 }
 
 .box-animation div:nth-child(11) {
     top: 10%;
     left: 90%;
-    animation: animate 7s linear infinite;
+    -webkit-animation: animate 7s linear infinite;
+            animation: animate 7s linear infinite;
 }
 
 .box-animation div:nth-child(12) {
     top: 70%;
     left: 85%;
-    animation: animate 12s linear infinite;
+    -webkit-animation: animate 12s linear infinite;
+            animation: animate 12s linear infinite;
 }
 
 .box-animation div:nth-child(13) {
     top: 55%;
     left: 30%;
-    animation: animate 5s linear infinite;
+    -webkit-animation: animate 5s linear infinite;
+            animation: animate 5s linear infinite;
 }
 
 /* Animation */
-@keyframes animate {
+@-webkit-keyframes animate {
     0% {
-        transform: scale(0) translateY(0) rotate(0);
+        -webkit-transform: scale(0) translateY(0) rotate(0);
+                transform: scale(0) translateY(0) rotate(0);
         opacity: 1;
     }
 
     100% {
-        transform: scale(1.3) translateY(-90px) rotate(360deg);
+        -webkit-transform: scale(1.3) translateY(-90px) rotate(360deg);
+                transform: scale(1.3) translateY(-90px) rotate(360deg);
+        opacity: 0;
+    }
+}
+@keyframes animate {
+    0% {
+        -webkit-transform: scale(0) translateY(0) rotate(0);
+                transform: scale(0) translateY(0) rotate(0);
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: scale(1.3) translateY(-90px) rotate(360deg);
+                transform: scale(1.3) translateY(-90px) rotate(360deg);
         opacity: 0;
     }
 }
@@ -145,22 +187,26 @@ main {
 /* Card And Animation Square Style */
 .red {
     border: 2px solid #e53238;
-    box-shadow: 0px 4px 15px -3px #e53238;
+    -webkit-box-shadow: 0px 4px 15px -3px #e53238;
+            box-shadow: 0px 4px 15px -3px #e53238;
 }
 
 .blue {
     border: 2px solid #0064d2;
-    box-shadow: 0px 4px 15px -3px #0064d2;
+    -webkit-box-shadow: 0px 4px 15px -3px #0064d2;
+            box-shadow: 0px 4px 15px -3px #0064d2;
 }
 
 .yellow {
     border: 2px solid #f5af02;
-    box-shadow: 0px 4px 15px -3px #f5af02;
+    -webkit-box-shadow: 0px 4px 15px -3px #f5af02;
+            box-shadow: 0px 4px 15px -3px #f5af02;
 }
 
 .green {
     border: 2px solid #86b817;
-    box-shadow: 0px 4px 15px -3px #86b817;
+    -webkit-box-shadow: 0px 4px 15px -3px #86b817;
+            box-shadow: 0px 4px 15px -3px #86b817;
 }
 
 
@@ -221,7 +267,24 @@ main {
 /* Home Page Text Animation Style */
 /* Credits to https://codepen.io/alphardex/pen/Exxodoq */
 .span-animation {
-    animation: glow-in 0.8s both;
+    -webkit-animation: glow-in 0.8s both;
+            animation: glow-in 0.8s both;
+}
+
+@-webkit-keyframes glow-in {
+  from {
+    opacity: 0;
+  }
+  65% {
+    opacity: 1;
+    text-shadow: 0 0 40px #f5af02;
+  }
+  75% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.7;
+  }
 }
 
 @keyframes glow-in {
@@ -260,7 +323,8 @@ main {
 
 /* Blog List Image Preview */
 .img-preview {
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     height: 100%;
 }
 
@@ -298,6 +362,7 @@ main {
 @media only screen and (min-width: 768px) {
     .img-preview-strip {
         height: 386px;
-        object-fit: fill;
+        -o-object-fit: fill;
+           object-fit: fill;
     }
   }
