--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 {% for message in messages %}
-                <div id="msg" class="alert {{ message.tags }} alert-dismissible fade show text-center" role="alert">
+                <div id="msg" class="alert {{ message.tags }} alert-dismissible fade show text-center z-1" role="alert">
                     {{ message | safe }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
