--- a/templates/search.html
+++ b/templates/search.html
@@ -12,14 +12,15 @@
             {% if post.approved == True %}
                 <div class="col-md-5">
                     <div class="card">
-                        <img src="{{ post.featured_image.url }}" class="card-img-top" alt="{{ post.strip.title }} image">
+                        <a href="{% url 'post' post.slug %}" class="h-100" aria-label="Linkt to complete text of {{ post.title }}">
+                            <img src="{{ post.featured_image.url }}" class="card-img-top img-preview" alt="{{ post.strip.title }} image">
+                        </a>
                         <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <p>Author:
-                                <a href="{% url 'profile' post.author.id %}" class="link-secondary link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover">
-                                    @{{ post.author }}
+                            <h5 class="card-title">
+                                <a href="{% url 'post' post.slug %}" class="link-secondary text-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-50-hover" aria-label="Linkt to complete text of {{ post.title }}">
+                                    {{ post.title }}
                                 </a>
-                            </p>
+                            </h5>
                             <!-- Django safe filter to render html content and truncatewords to show first 30 words -->
                             {{ post.content|safe|truncatewords:30 }}
                             <div class="text-end">
