Add new user story, member section, future feature

--- a/templates/header.html
+++ b/templates/header.html
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search" method="GET" action="{% url 'search' %}">
-                    <input class="form-control me-2" name="search" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2" name="search" type="search" placeholder="Search Blog Posts" aria-label="Search">
                     <button class="btn member-yellow" type="submit">Search</button>
                 </form>
             </div>
