--- a/blogpost/templates/blogpost/strippost_update.html
+++ b/blogpost/templates/blogpost/strippost_update.html
@@ -9,7 +9,7 @@
         <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h2 class="mb-4">Update Review</h2>
             <!-- Form For Updating Posts -->
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
                 {{ form.media }}
