--- a/member/templates/member/member_form.html
+++ b/member/templates/member/member_form.html
@@ -9,7 +9,7 @@
         <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h2 class="mb-4">Sign Up</h2>
             <!-- Sign Up Form -->
-            <form action="" method="POST">
+            <form method="POST">
                 {% csrf_token %}
                 {{ form | crispy}}
                 <input type="submit" value="Sign Up" class="btn btn-green">
