--- a/member/templates/member/member_sign_in.html
+++ b/member/templates/member/member_sign_in.html
@@ -9,7 +9,7 @@
         <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h2 class="mb-4">Sign In</h2>
             <!-- Sign In Form-->
-            <form action="" method="POST">
+            <form method="POST">
                 {% csrf_token %}
                 {{ form | crispy}}
                 <input type="submit" value="Sign In" class="btn btn-green">
