--- a/stripdetail/templates/stripdetail/stripdetail_form.html
+++ b/stripdetail/templates/stripdetail/stripdetail_form.html
@@ -9,7 +9,7 @@
         <div class="col-md-7 bg-grey-opacity rounded p-4">
             <h2 class="mb-4">Expand Strip Collection</h2>
             <!-- Form For Creating Strip Details -->
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.title|as_crispy_field }}
                 {{ form.artist|as_crispy_field }}
