--- a/templates/delete_confirm.html
+++ b/templates/delete_confirm.html
@@ -7,7 +7,7 @@
         <div class="col-md-7 text-center btn-grey rounded p-4">
             <h2>Delete Confiramtion</h2>
             <!-- Delete Confirmation Form-->
-            <form action="" method="POST">
+            <form method="POST">
                 {% csrf_token %}
                 <p>Are you sure you want to delete "{{ object }}"?</p>
                 <input type="submit" value="Delete" class="btn btn-red m-1">
